tests/src/test/resources/scala/tools/nsc/effects/io/AscriptionsCastsSuite-files/ascriptionsCastsNeg.check
newSource:9: error: effect type mismatch;
 found   : @io
 required: @noIo
    (no: @io)
          ^
newSource:14: error: effect type mismatch;
 found   : @io
 required: @noIo
    (yo: @noIo)
     ^
